--- a/changelog.txt
+++ b/changelog.txt
@@ -3,5 +3,5 @@
 = 0.9 - 2 October 2016 =
 * Various changes to prepare for release.
 
-= 0.1 - May 13 2016 =
+= 0.1 - 13 May 2016 =
 * Preliminary release.
