--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 0.9.0.1 - 4 October 2016 =
+* Remove page title conditional.
+
 = 0.9 - 2 October 2016 =
 * Various changes to prepare for release.
 
