--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 
 = 0.9.0.1 - 4 October 2016 =
 * Remove page title conditional.
+* Remove sidebar conditional.
 
 = 0.9 - 2 October 2016 =
 * Various changes to prepare for release.
