--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 0.9.3 - 21 October 2016 =
+* Added missing translation domains.
+
 = 0.9.2 - 9 October 2016 =
 * Added missing translation function to widget area descriptions.
 
