Added TinyColor credit to theme readme file

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 0.9.4 - 05 December 2016 =
+* Added TinyColor credit to theme readme file.
+
 = 0.9.3 - 21 October 2016 =
 * Added missing translation domains.
 
