--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 0.9.6 - 06 December 2016 =
+* Wide ranging enhancements to styling, settings and WooCommerce integration.
+
 = 0.9.5 - 05 December 2016 =
 * Prefix image sizes.
 
