--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 1.0.7 - 28 March 2016 =
+* Update build script to prevent z-index reduction.
+* Prevent footer border from outputting when no widgets are present.
+
 = 1.0.6 - 16 March 2016 =
 * Switched to minified CSS files.
 * Updated settings framework.
