--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 == Changelog ==
 
 = 1.0.7 - 28 March 2016 =
+* Fixed top bar social media icon inheritance bug.
 * Update build script to prevent z-index reduction.
 * Prevent footer border from outputting when no widgets are present.
 
