--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 1.0.13 - 19 June 2017 =
+* Fixed mini-cart overflow issue.
+* Fixed header z-index issue.
+
 = 1.0.12 - 13 June 2017 =
 * Add new blog theme setting to allow for the more link to be inserted after the excerpt.
 * Resolved small display bug with the Menu in line with logo header layout.
