--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 1.1.3 - 21 August 2017 =
+* Added Masonry blog layout.
+
 = 1.1.2 - 01 August 2017 =
 * Changed mini-cart drop-down direction when used with menu in line with logo header layout.
 * Added post formats outputs for alternate and grid blog layouts.
