--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 == Changelog ==
 
-= 1.1.3 - 29th August 2017 =
+= 1.1.4 - 06 September 2017 =
+* Resolve post header spacing issue in Post Loop widget templates.
+* Fix missing category meta setting in the grid, alternate and masonry layouts.
+
+= 1.1.3 - 29 August 2017 =
 * Added Masonry blog layout.
 * Removed the WooCommerce archive hover add to cart and quick view buttons from mobile.
 * Adjusted the sticky navigation for the admin bar when logged in.
