--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,7 @@
 == Changelog ==
 
+= 1.2 - 20 October 2017 =
+
 = 1.1.4 - 06 September 2017 =
 * Resolve post header spacing issue in Post Loop widget templates.
 * Fix missing category meta setting in the grid, alternate and masonry layouts.
