--- a/changelog.txt
+++ b/changelog.txt
@@ -1,11 +1,14 @@
 == Changelog ==
 
-= 1.2 - 30 October 2017 =
+= 1.2.1 - 30 October 2017 =
+* Various improvements to the Jetpack Portfolio integration.
+* Added Jetpack Portfolio support.
+
+= 1.2 - 26 October 2017 =
 * Small styling fix for loops in Post Loop widget.
 * Fix blog meta categories setting bug.
 * Added styling and position support for the WooCommerce store notice.
 * Added Jetpack Portfolio support.
-* Added comment moderation notification.
 
 = 1.1.4 - 06 September 2017 =
 * Resolve post header spacing issue in Post Loop widget templates.
