--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 1.2.3 - 15 December 2017 =
+* Allow mobile menu non-linked parent items to toggle the the dropdown on click.
+
 = 1.2.2 - 22 November 2017 =
 * Updated WooCommerce functions to match latest release.
 * Resolved video post format display issue in archive view in grid and similar blog layouts. 
