--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 1.2.5 - 08 January 2017 =
+* Improved the sticky navigation transition effect.
+
 = 1.2.4 - 23 December 2017 =
 * Added the product image gallery to the WooCommerce Quick View modal.
 * Fixed WooCommerce checkout problem with products sold individually. 
