--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 1.2.14 - 18 April 2018 =
+* Support a3 Lazy Load for Post Format: Image.
+
 = 1.2.13 - 26 March 2018 =
 * Fixed WooCommerce left sidebar layout when no widgets added to main sidebar.
 * Fixed `siteorigin_unwind_content_width` filter spelling.
