--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 == Changelog ==
 
+= 1.3.1 - 08 August 2018 =
+* Resolved Jetpack Likes warning.
+* Made WooCommerce Quick View accessible to WooCommerce shortcodes.
+
 = 1.3 - 03 August 2018 =
 * Updated Customizer settings CSS.
 * Added Jetpack Sharing title back.
