--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 = 1.3.1 - 08 August 2018 =
 * Resolved Jetpack Likes warning.
 * Made WooCommerce Quick View accessible to WooCommerce shortcodes.
+* Removed `siteorigin_unwind_date_format` filter.
 
 = 1.3 - 03 August 2018 =
 * Updated Customizer settings CSS.
