--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 == Changelog ==
 
+= 1.3.2 - 05 October 2018 =
+* Added a check to ensure FitVids doesn't load on Gutenberg pages.
+
 = 1.3.1 - 08 August 2018 =
 * Resolved Jetpack Likes warning.
 * Made WooCommerce Quick View accessible to WooCommerce shortcodes.
